--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE=mongodb://localhost:27017/ncettestportal
+DATABASE=mongodb+srv://rahul:ncet999@cluster0.ifc9h.mongodb.net/?retryWrites=true&w=majority
 NODE_ENV=production
